--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <br>
     
     <ul>
-        <li><h3><a target="_blank" href="./Clase04/Formulario.html">Formulario en Tabla</a></h3></li>
+        <li><h3><a target="_blank" href="./Clase04/Formulario.html">Clase 04 - Formulario en Tabla</a></h3></li>
         <li><h3><a target="_blank" href="./Clase04/FeriadosNacionalesEnTabla.html">Clase 04 - Feriados Nacionales en Tabla</a></h3></li>
         <li><h3><a target="_blank" href="./Clase02/FeriadosNacionales.html">Clase 02 - Feriados Nacionales</a></h3></li>
     </ul>
